# windchill_sdk

./: .gitignore  CLAUDE.md  README.md  accessing-domains.md  actions-checkin-checkout-delete.md  add-custom-properties.md  add-new-functions.md  batch-request-examples.md  batch-support-theory.md  cad-document-management-domain.md  capa-domain.md  change-management-domain.md  changelog-v1.1.md  changelog-v1.3.md  changelog-v1.4.md  changelog-v1.6.md  common-domain.md  customer-experience-management-domain.md  datetime-offset.md  document-management-actions.md  document-management-domain.md  domain-json-file.md  effectivity-management-domain.md  error-codes.md  example-checkin-part.md  example-checkout-part.md  example-complete-workitem.md  example-create-document.md  example-create-domain.md  example-create-part-usage-link.md  example-fetch-nonce.md  example-query-filter.md  example-reassign-workitems.md  example-revise-multiple-parts.md  example-soft-type.md  example-upload-content.md  extending-domains.md  filter-navigation-properties.md  framework-overview.md  generate_spm.py  (+18 more)
docs/: add-new-actions.md  api-catalog.md  changelog-v1.2.md  changelog-v1.5.md  classification-structure-domain.md  common-domain-functions.md  common-navigation-properties.md  config-paths.md  create-new-domain.md  data-administration-domain.md  domains-overview.md  entity-data-model.md  event-management-domain.md  example-create-part.md  example-read-bom.md  lifecycle-states.md  odata-as-service.md  odata-primitives.md  principal-management-domain.md  process-http-requests.md  workflow-domain.md  (+3 more)
(+84 files in other folders)
