[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windchill-sdk"
version = "0.1.0"
description = "Python SDK, MCP Server, and CLI for PTC Windchill REST API v1.6"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
cli = ["typer>=0.12", "rich>=13"]
all = ["windchill-sdk[mcp,cli]"]
dev = [
    "windchill-sdk[all]",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
]

[project.scripts]
wc = "windchill_cli.main:app"

[project.entry-points."mcp.servers"]
windchill = "windchill_mcp.server:mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/windchill", "src/windchill_mcp", "src/windchill_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
